welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: reassignment to val
  } else if ((die1==die2)) { die1 = ((die1 + 1)%6)
                                  ^withoutDoubles:5: error: reassignment to val
                             die2 = ((die1 + 1)%6)
                                  ^